# winzy-pdf-to-text

./: README.md  pyproject.toml
tests/: test_winzy_pdf_to_text.py
winzy_pdf_to_text/: __init__.py
