[project]
name = "winzy-pdf-to-text"
version = "0.0.1"
description = "Extract text from a given pdf"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "pypdf",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-pdf-to-text"
Changelog = "https://github.com/sukhbinder/winzy-pdf-to-text/releases"
Issues = "https://github.com/sukhbinder/winzy-pdf-to-text/issues"
CI = "https://github.com/sukhbinder/winzy-pdf-to-text/actions"

[project.entry-points."winzy.plugins"]
pdf2txt = "winzy_pdf_to_text:pdf2txt_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
